--- a/src/components/PageContainer/style.css
+++ b/src/components/PageContainer/style.css
@@ -4,3 +4,43 @@
     height: 10px;
     width: 10px;
 }
+
+.UserLoggedIn{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.Avatar{
+    height: 40px;
+    width: 40px;
+    border-radius: 100px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+}
+
+.AvatarName{
+    font-family: 'Quicksand';
+    color: #ffff;
+    display: flex;
+    justify-content: center;
+}
+
+.Foto{
+    height: 40px;
+    width: 40px;
+    background-image: url(../../assets/profile-user-profile.png);
+    background-repeat: no-repeat;
+    background-size: 40px 40px;
+    border-radius: 60px;
+}
+
+.BackgroundVector{
+    background-image: url(../../assets/PatternBG.svg);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: 630px 400px;
+}
